# musicdl_api

./: .gitignore  AGENTS.md  README.md  pyproject.toml
deploy/: deploy.sh
deploy/systemd/: musicdl-api.service
musicdl_api/: __main__.py  config.py  main.py  models.py  service.py
tests/: test_config.py  test_musicdl_worker.py  test_service.py
