[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "musicdl-api"
version = "0.1.0"
description = "FastAPI service wrapper around musicdl"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "pydantic>=2.11,<3",
  "musicdl==2.13.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
]

[project.scripts]
musicdl-api = "musicdl_api.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["musicdl_api"]
